--- a/tema-3/style.css
+++ b/tema-3/style.css
@@ -1,28 +1,195 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Helvetica, sans-serif;
+    background-color: #EDE5DD;
+
+    @media (max-width: 768px) {
+
+        padding-bottom: 200px;
+    }
+
 }
 
-.card {
-    width: 500px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 5px;
-    text-align: center;
-    margin: 50px;
-    display: inline-block;
-    background-color: #f9f9f9;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+.logo-container img{
+    width: 150px;
+    height: auto;
+    display: block;
+    margin: 10px auto;
 }
 
-.card img {
-    width: 100%;
-    border-radius: 10px;
-}
+
 
 #product-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
     padding: 20px;
+    margin-top: 20px;
+}
+
+#product-container a {
+    text-decoration: none;
+    color: black;
+}
+
+
+
+#hero-carousel{
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+
+#hero-carousel .carousel-item img {
+    object-fit: cover;
+    width: 100%;
+    height: 275px;
+}
+
+
+.kort {
+    width: 100%;
+    height: 350px;
+    border: 1px solid #ddd;
+    text-align: center;
+    background-color: #CFD3BD;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    padding-bottom: 60px;
+}
+
+
+.kort:nth-child(even) {
+    transform: translateY(50px);
+}
+
+.kort img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+.kort h2{
+    margin-top: 10px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+
+.kort p{
+    font-size: 10px;
+}
+
+.kort:hover{
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+
+}
+
+
+.carousel-container {
+    position: relative;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    padding: 10px;
+    scroll-behavior: smooth;
+    margin-bottom: 20px;
+    mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0));
+}
+
+
+.carousel {
+    display: flex;
+    gap: 20px;
+}
+.carousel-container::-webkit-scrollbar {
+    display: none;
+}
+
+
+.tab {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 120px;
+    flex-shrink: 0; /
+}
+
+
+.tab img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
+
+.tab p {
+    font-size: 14px;
+    color: #333;
+    margin: 0;
+    text-align: center;
+}
+
+
+.tab a{
+    text-decoration: none;
+}
+
+
+.tab img:hover{
+    transform: scale(1.25);
+    transition: transform 0.3s ease;
+}
+
+@media (max-width: 768px) {
+    .carousel {
+        gap: 15px;
+    }
+
+    .tab img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .tab p {
+        font-size: 12px;
+    }
+}
+
+footer{
+    position: fixed;
+    height: 15%;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #A1927F;
+    color: white;
+    text-align: center;
+}
+
+.footer-tabs{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 15px;
+}
+
+.footer-tabs img{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.footer-tabs img:hover{
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
 }
