--- a/tema-3/style.css
+++ b/tema-3/style.css
@@ -1,10 +1,11 @@
 body{
     font-family: Verdana, Helvetica, sans-serif;
     background-color: #EDE5DD;
+    overflow-x: hidden;
 
     @media (max-width: 768px) {
 
-        padding-bottom: 200px;
+        padding-bottom: 100px;
     }
 
 }
@@ -14,6 +15,38 @@ body{
     height: auto;
     display: block;
     margin: 10px auto;
+}
+
+
+.baggrund1 img{
+    position: absolute;
+    top: -50px;
+    left: -50px;
+    width: auto;
+    height: 30vh;
+    z-index: -1;
+    opacity: 0.5;
+}
+
+
+.popup-container img{
+    position: absolute;
+    top: 50px;
+    right: 10px;
+    width: 100px;
+    height: 80px;
+}
+
+
+.h1-container{
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.h1-container h1{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 
@@ -59,6 +92,7 @@ body{
     align-items: center;
     margin-top: 50px;
     padding-bottom: 60px;
+    position: relative;
 }
 
 
@@ -76,17 +110,34 @@ body{
     margin-top: 10px;
     font-size: 15px;
     font-weight: bold;
+    text-align: left;
+    margin-left: 10px;
 }
 
 
 .kort p{
     font-size: 10px;
+    text-align: left;
+    margin-left: 10px;
+
 }
 
-.kort:hover{
-    transform: scale(1.05);
+.kort img:last-of-type:hover{
+    transform: scale(1.15);
     transition: transform 0.3s ease;
 
+}
+
+.kort img:last-of-type {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    position: absolute;
+    top: 300px;
+    right: 10px;
+    border: 1px solid black;
+    margin-right: 1px;
 }
 
 
@@ -142,7 +193,7 @@ body{
 
 
 .tab img:hover{
-    transform: scale(1.25);
+    transform: scale(1.1);
     transition: transform 0.3s ease;
 }
 
@@ -163,7 +214,7 @@ body{
 
 footer{
     position: fixed;
-    height: 15%;
+    height: 11%;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -181,8 +232,8 @@ footer{
 }
 
 .footer-tabs img{
-    width: 75px;
-    height: 75px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     object-fit: cover;
     margin-left: 30px;
@@ -192,4 +243,128 @@ footer{
 .footer-tabs img:hover{
     transform: scale(1.1);
     transition: transform 0.3s ease;
+}
+
+
+.baggrund2 img{
+    position: absolute;
+    bottom: -150px;
+    right: -50px;
+    width: auto;
+    height: 30vh;
+    z-index: -1;
+    opacity: 0.5;
+}
+
+.footer-info{
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    margin-top: 90px;
+}
+
+.info1 h2{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.info1 p{
+    font-size: 12px;
+    line-height: 30px;
+
+}
+
+.info2{
+    margin-right: 20px;
+}
+
+.info2 h2{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.info2 p{
+    font-size: 12px;
+    line-height: 30px;
+}
+
+
+.info2 button{
+    border: none;
+    width: 100px;
+    height: 25px;
+    font-size: 12px;
+    text-align: center;
+    background-color: #A1927F;
+}
+
+.info2 button:hover{
+    background-color: #d7c4aa;
+    transition: 0.3s ease;
+}
+
+.info2 img{
+    width: 90px;
+    height: auto;
+    display: block;
+    margin-top: 20px;
+
+}
+
+.info3 h2{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.info3 p{
+    font-size: 12px;
+    line-height: 30px;
+
+}
+
+#popupBtn{
+    cursor: pointer;
+}
+
+#popupBtn:hover{
+    transform: scale(1.1);
+    transition: 0.3s ease;
+}
+
+
+#popupImg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+#popupImg img {
+    position: relative;
+    top: 100px;
+    width: 80%;
+    height: auto;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#closeBtn {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+#closeBtn:hover {
+    color: dimgray;
+    transition: 0.2s ease;
 }
