--- a/tema-3/style.css
+++ b/tema-3/style.css
@@ -45,7 +45,7 @@ body{
 
 .h1-container h1{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
 }
 
@@ -76,7 +76,7 @@ body{
 #hero-carousel .carousel-item img {
     object-fit: cover;
     width: 100%;
-    height: 275px;
+    height: 267px;
 }
 
 
@@ -91,6 +91,7 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+    margin-bottom: 20px;
     padding-bottom: 60px;
     position: relative;
 }
@@ -260,7 +261,7 @@ footer{
     display: flex;
     flex-direction: row;
     margin: 10px;
-    margin-top: 90px;
+    margin-top: 75px;
 }
 
 .info1 h2{
@@ -321,6 +322,12 @@ footer{
     line-height: 30px;
 
 }
+
+.info3 img{
+    width: 20px;
+    height: auto;
+}
+
 
 #popupBtn{
     cursor: pointer;
