--- a/tema-3/produktside2.css
+++ b/tema-3/produktside2.css
@@ -146,7 +146,7 @@ footer{
     bottom: 0;
     left: 0;
     width: 100%;
-    background: #A1927F;
+    background: #EDE5DD;
     color: white;
     text-align: center;
 }
