--- a/tema-3/produktside3.css
+++ b/tema-3/produktside3.css
@@ -143,7 +143,7 @@ footer{
     bottom: 0;
     left: 0;
     width: 100%;
-    background: #A1927F;
+    background: #EDE5DD;
     color: white;
     text-align: center;
 }
