--- a/tema-3/style.css
+++ b/tema-3/style.css
@@ -76,7 +76,7 @@ body{
 #hero-carousel .carousel-item img {
     object-fit: cover;
     width: 100%;
-    height: 267px;
+    height: 275px;
 }
 
 
@@ -219,7 +219,7 @@ footer{
     bottom: 0;
     left: 0;
     width: 100%;
-    background: #A1927F;
+    background: #EDE5DD;
     color: white;
     text-align: center;
 }
